--- a/components/DiaryList/DiaryList.module.css
+++ b/components/DiaryList/DiaryList.module.css
@@ -75,6 +75,7 @@
   }
   .diarySection {
     padding: 0;
+    margin: 0;
   }
   .title {
     font-size: 20px;
