--- a/components/WeekSelector/WeekSelector.module.css
+++ b/components/WeekSelector/WeekSelector.module.css
@@ -1,19 +1,16 @@
 .weekSelectorContainer {
   padding-left: 20px;
   padding-right: 20px;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 .weekSelector {
   display: flex;
   gap: 16px;
   overflow-x: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
   margin-bottom: 32px;
-}
-
-.weekSelector::-webkit-scrollbar {
-  display: none;
+  overflow-y: hidden;
 }
 
 @media only screen and (min-width: 768px) {
@@ -22,8 +19,6 @@
     max-width: 1453px;
     height: 87px;
     gap: 16px;
-    box-sizing: border-box;
-    /* margin-left: 32px; */
   }
   .weekSelectorContainer {
     padding-left: 0;
@@ -39,6 +34,8 @@
     gap: 16px;
     padding: 0;
     margin: 0;
+    scrollbar-width: auto;
+    -ms-overflow-style: auto;
   }
 }
 
